project initialization is finished

--- a/01 Common/01 Core/DDD_Shop.Common.SharedKernel/DDD_Shop.Common.Utils.csproj
+++ b/01 Common/01 Core/DDD_Shop.Common.SharedKernel/DDD_Shop.Common.Utils.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+    <Folder Include="Helpers\" />
+    <Folder Include="Utils\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+  </ItemGroup>
+
 </Project>
