--- a/02 Microservices/DDD_Shop/03 Endpoints/DDD_Shop.Api/DDD_Shop.Api.csproj
+++ b/02 Microservices/DDD_Shop/03 Endpoints/DDD_Shop.Api/DDD_Shop.Api.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\..\02 Infrastrucres\Data\DDD_Shop.Infrastructure.SqlServer\DDD_Shop.Infrastructure.SqlServer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
