--- a/00 Frramework/Src/DDD_Shop.Framework.Utils/DDD_Shop.Framework.Utils.csproj
+++ b/00 Frramework/Src/DDD_Shop.Framework.Utils/DDD_Shop.Framework.Utils.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DDD_Shop.IdentityServer.Domain\DDD_Shop.Core.IdentityServer.Domain.csproj" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
 </Project>
